@@ -1,3 +1,10 @@
+2007-07-27:
+	* src/v5.c: fix v5_check_initialized_pwc() with Heimdal
+	* src/v4.c: fix compilation for no-krb4-support cases, avoid cloning
+	the tktfile if we were asked not to do that
+	* src/stash.c: don't leak the v4 tktfile name when cleaning up, and
+	fix the check for whether or not we have a saved file
+
 2007-07-25:
 	* src/v4.c: try to clean up the debug message for v5->v4 principal
 	name conversion
